k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: <tu-dominio>
      http:
        paths:
          - path: /store
            pathType: Prefix
            backend:
              service:
                name: store
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80
